--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     title: "桃園 / 東京成田 / 伊香保石段街 / 溫泉飯店",
                     date: "02/04 (三)",
                     highlights: ["特別贈送日式點心+茶飲", "伊香保石段街", "美人湯溫泉"],
-                    details: "搭乘星宇航空豪華客機直飛東京。抵達後前往伊香保溫泉區，漫步於充滿古意的石段街（365階），感受溫泉街的懷舊氛圍。晚餐享用飯店內會席料理或自助餐。",
+                    details: "搭乘星宇航空 JX800 (08:30-12:45) 豪華客機直飛東京。抵達後前往伊香保溫泉區，漫步於充滿古意的石段街（365階），感受溫泉街的懷舊氛圍。晚餐享用飯店內會席料理或自助餐。",
                     meals: { b: "機上精緻餐食", l: "機上精緻餐食", d: "飯店自助晚餐 或 會席料理" },
                     hotel: "森秋旅館 或 如心之里 或 同級",
                     icon: React.createElement(Plane, { className: "w-5 h-5 text-blue-500" }),
@@ -162,7 +162,7 @@
                     title: "東京成田 / 桃園 (溫暖的家)",
                     date: "02/08 (日)",
                     highlights: ["滿載而歸", "溫暖的家"],
-                    details: "享用早餐後，整理行囊，帶著滿滿的回憶與戰利品前往成田機場，搭機返回溫暖的家。",
+                    details: "享用早餐後，整理行囊，帶著滿滿的回憶與戰利品前往成田機場，搭乘星宇航空 JX801 (14:00-16:30) 班機返回溫暖的家。",
                     meals: { b: "飯店內早餐", l: "機上精緻餐食", d: "溫暖的家" },
                     hotel: "溫暖的家",
                     icon: React.createElement(Plane, { className: "w-5 h-5 text-green-500" }),
@@ -258,7 +258,7 @@
                                 )
                             ),
                             React.createElement("div", { className: "mt-3 pt-3 border-t border-slate-100 text-[10px] text-slate-400 flex justify-between" },
-                                React.createElement("span", null, "去程: JX800"),
+                                React.createElement("span", null, "去程: JX800 (08:30-12:45)"),
                                 React.createElement("span", null, "回程: JX801 (14:00-16:30)")
                             )
                         )
