--- a/index.html
+++ b/index.html
@@ -383,11 +383,11 @@
                                         item.attractions.map((attr, i) => 
                                             React.createElement("div", { key: i, className: "bg-white rounded-xl shadow-sm overflow-hidden border border-slate-100" },
                                                 // 修改這裡的 h-64 可以改變圖片高度 (例如 h-48, h-72)
-                                                React.createElement("div", { className: "h-72 relative" }, 
+                                                React.createElement("div", { className: "h-64 relative" }, 
                                                     React.createElement("img", { 
                                                         src: attr.image, 
                                                         alt: attr.name, 
-                                                        className: "w-full h-full object-cover",
+                                                        className: "w-full h-full object-cover object-top", // 改成 object-cover object-top
                                                         onError: (e) => {
                                                             e.target.onerror = null;
                                                             e.target.src = 'https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?q=80&w=800&auto=format&fit=crop';
@@ -515,4 +515,3 @@
     </script>
 </body>
 </html>
-
