--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                                     React.createElement("img", { 
                                                         src: attr.image, 
                                                         alt: attr.name, 
-                                                        className: "w-full h-full object-cover object-top", // 改成 object-cover object-top
+                                                        className: "w-full h-full object-contain bg-slate-50", // 改成 object-contain
                                                         onError: (e) => {
                                                             e.target.onerror = null;
                                                             e.target.src = 'https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?q=80&w=800&auto=format&fit=crop';
