--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             name: "伊香保石段街",
                             // 指向 GitHub images 資料夾
                             image: "./images/伊香保石段街.png",
-                            desc: "365階石階綿延而上，充滿大正浪漫氛圍，是溫泉饅頭發源地。"
+                            desc: "伊香保溫泉的象徵，這條擁有400多年歷史的石階梯共有365階，象徵著「一年365天，天天繁榮熱鬧」。石階兩旁林立著充滿昭和復古風情的溫泉旅館、伴手禮店、射擊遊戲場與足湯。遊客可以邊吃著剛出爐的勝月堂溫泉饅頭，邊漫步登高，最後抵達頂端的伊香保神社祈求良緣。"
                         },
                         {
                             name: "溫泉會席料理",
@@ -140,7 +140,7 @@
                             name: "草津溫泉湯畑",
                             // 指向 GitHub images 資料夾
                             image: "./images/草津溫泉 湯畑.png",
-                            desc: "每分鐘湧出4000公升溫泉，煙霧繚繞的夢幻場景。"
+                            desc: "日本三大名湯之首草津溫泉的地標，每分鐘湧出4000公升滾燙泉水。透過七條木槽冷卻水溫並採集「湯之花」。白天煙霧繚繞如夢似幻，夜晚點燈後更顯浪漫。必看的「揉湯」表演，吟唱草津節並用長木板攪拌泉水，是獨有的傳統文化體驗。"
                         },
                         {
                             name: "萬座滑雪場",
@@ -167,19 +167,19 @@
                         {
                             name: "鬼押出園",
                             image: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Onioshidashi01.jpg/800px-Onioshidashi01.jpg",
-                            desc: "淺間山噴發形成的黑色熔岩奇景。"
+                            desc: "世界三大奇景之一，是1783年淺間山火山大爆發時，噴出的熔岩凝固後形成的黑色奇岩地貌。無數猙獰的巨岩彷彿鬼怪推擠而出，景象壯觀。園區內的觀音堂可祈福，冬季雪白覆蓋在黑色熔岩上，形成絕美的黑白對比世界。"
                         },
                         {
                             name: "聖保羅教堂",
                             // 指向 GitHub images 資料夾 (這個只有 JPG)
                             image: "./images/聖保羅教堂2.jpg",
-                            desc: "輕井澤地標，歐風木造建築。"
+                            desc: "輕井澤代表性地標，由建築師安東尼·雷蒙於1935年設計。這座溫馨的木造天主教堂擁有巨大的尖塔與傾斜的三角形屋頂，完美融入森林。內部以原木支撐，氛圍莊嚴。傳說在此結婚能獲得幸福，是情侶嚮往的浪漫聖地。"
                         },
                         {
-                            name: "輕井澤舊銀座通 & Outlet",
+                            name: "輕井澤舊銀座通",
                             // 指向 GitHub images 資料夾
                             image: "./images/輕井澤舊銀座通.png",
-                            desc: "充滿歐式風情的街道與佔地廣大的購物天堂。"
+                            desc: "輕井澤最熱鬧的商店街，洋溢濃厚歐式風情。匯集了澤屋果醬、淺野屋麵包、MIKADO咖啡等歷史悠久的老店。昔日是傳教士與文人雅士的避暑勝地，漫步其中不僅能品嚐美食、購買伴手禮，還能感受古典優雅的度假氛圍。"
                         }
                     ],
                     detailedFeatures: {
@@ -202,13 +202,13 @@
                             name: "川越小江戶",
                             // 指向 GitHub images 資料夾
                             image: "./images/川越小江戶.png",
-                            desc: "川越地標，古老的報時鐘樓與傳統藏造建築。"
+                            desc: "距離東京不遠的時光隧道，完整保留江戶風貌。「藏造一番街」矗立著黑色厚重瓦片的傳統倉庫建築。地標「時之鐘」屹立數百年，至今仍敲鐘報時。遊客可穿和服漫步，品嚐地瓜甜點，或造訪冰川神社，深刻體驗日本傳統魅力。"
                         },
                         {
                             name: "台場",
                             // 指向 GitHub images 資料夾
                             image: "./images/台場.png",
-                            desc: "東京灣的人氣娛樂區，包含巨型獨角獸鋼彈。"
+                            desc: "東京灣最受歡迎的娛樂區。最吸睛的是DiverCity前的「獨角獸鋼彈」立像，高19.7公尺，夜晚有精彩燈光變身秀。此外，還能漫步海濱公園，欣賞彩虹大橋、自由女神與東京鐵塔同框的迷人夜景，是感受東京現代魅力的最佳去處。"
                         }
                     ],
                     detailedFeatures: {
