Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -109,15 +109,14 @@
                     tagColor: "bg-blue-50 text-blue-600",
                     attractions: [
                         {
+                            name: "開心出發",
+                            image: "./images/出國.png",
+                        },
+                        {
                             name: "伊香保石段街",
                             // 指向 GitHub images 資料夾
                             image: "./images/伊香保石段街.png",
                             desc: "伊香保溫泉的象徵，這條擁有400多年歷史的石階梯共有365階，象徵著「一年365天，天天繁榮熱鬧」。石階兩旁林立著充滿昭和復古風情的溫泉旅館、伴手禮店、射擊遊戲場與足湯。遊客可以邊吃著剛出爐的勝月堂溫泉饅頭，邊漫步登高，最後抵達頂端的伊香保神社祈求良緣。"
-                        },
-                        {
-                            name: "溫泉會席料理",
-                            image: "https://images.unsplash.com/photo-1585938389612-a552a28d6914?q=80&w=800&auto=format&fit=crop",
-                            desc: "享受當季食材製作的精緻日式料理。"
                         }
                     ],
                     detailedFeatures: {
@@ -515,3 +514,4 @@
     </script>
 </body>
 </html>
+
