--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
                             name: "伊香保石段街",
                             // 指向 GitHub images 資料夾
                             image: "./images/伊香保石段街.png",
+                        },
+                        {
+                            name: "伊香保石段街",
+                            // 指向 GitHub images 資料夾
+                            image: "./images/伊香保石段街2.jpg",
                             desc: "伊香保溫泉的象徵，這條擁有400多年歷史的石階梯共有365階，象徵著「一年365天，天天繁榮熱鬧」。石階兩旁林立著充滿昭和復古風情的溫泉旅館、伴手禮店、射擊遊戲場與足湯。遊客可以邊吃著剛出爐的勝月堂溫泉饅頭，邊漫步登高，最後抵達頂端的伊香保神社祈求良緣。"
                         }
                     ],
@@ -514,4 +519,5 @@
     </script>
 </body>
 </html>
+
 
