--- a/index.html
+++ b/index.html
@@ -147,8 +147,13 @@
                             desc: "日本三大名湯之首草津溫泉的地標，每分鐘湧出4000公升滾燙泉水。透過七條木槽冷卻水溫並採集「湯之花」。白天煙霧繚繞如夢似幻，夜晚點燈後更顯浪漫。必看的「揉湯」表演，吟唱草津節並用長木板攪拌泉水，是獨有的傳統文化體驗。"
                         },
                         {
+                            name: "伊香保石段街",
+                            // 指向 GitHub images 資料夾
+                            image: "./images/草津溫泉 湯畑2.jpg",
+                        },
+                        {
                             name: "萬座滑雪場",
-                            image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Manza-manzayama.jpg/800px-Manza-manzayama.jpg",
+                            image: "./images/萬座滑雪場.jpg",
                             desc: "海拔1800公尺的粉雪天堂，適合初學者體驗。"
                         }
                     ],
@@ -519,5 +524,6 @@
     </script>
 </body>
 </html>
+
 
 
