--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             desc: "日本三大名湯之首草津溫泉的地標，每分鐘湧出4000公升滾燙泉水。透過七條木槽冷卻水溫並採集「湯之花」。白天煙霧繚繞如夢似幻，夜晚點燈後更顯浪漫。必看的「揉湯」表演，吟唱草津節並用長木板攪拌泉水，是獨有的傳統文化體驗。"
                         },
                         {
-                            name: "伊香保石段街",
+                            name: "草津溫泉湯畑",
                             // 指向 GitHub images 資料夾
                             image: "./images/草津溫泉 湯畑2.jpg",
                         },
@@ -175,8 +175,18 @@
                     attractions: [
                         {
                             name: "鬼押出園",
-                            image: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Onioshidashi01.jpg/800px-Onioshidashi01.jpg",
-                            desc: "世界三大奇景之一，是1783年淺間山火山大爆發時，噴出的熔岩凝固後形成的黑色奇岩地貌。無數猙獰的巨岩彷彿鬼怪推擠而出，景象壯觀。園區內的觀音堂可祈福，冬季雪白覆蓋在黑色熔岩上，形成絕美的黑白對比世界。"
+                            image: "./images/鬼押出園.png",
+                        },
+                        {
+                            name: "鬼押出園",
+                            // 指向 GitHub images 資料夾 (這個只有 JPG)
+                            image: "./images/鬼押出園2.jpg",
+                            desc: "世界三大奇景之一，是1783年淺間山火山大爆發時，噴出的熔岩凝固後形成的黑色奇岩地貌。無數猙獰的巨岩彷彿鬼怪推擠而出，景象壯觀。園區內的觀音堂可祈福，冬季雪白覆蓋在黑色熔岩上，形成絕美的黑白對比世界"
+                        },
+                        {
+                            name: "聖保羅教堂",
+                            // 指向 GitHub images 資料夾 (這個只有 JPG)
+                            image: "./images/聖保羅教堂.png",
                         },
                         {
                             name: "聖保羅教堂",
@@ -188,6 +198,11 @@
                             name: "輕井澤舊銀座通",
                             // 指向 GitHub images 資料夾
                             image: "./images/輕井澤舊銀座通.png",
+                        },
+                        {
+                            name: "輕井澤舊銀座通",
+                            // 指向 GitHub images 資料夾
+                            image: "./images/輕井澤舊銀座通2.jpg",
                             desc: "輕井澤最熱鬧的商店街，洋溢濃厚歐式風情。匯集了澤屋果醬、淺野屋麵包、MIKADO咖啡等歷史悠久的老店。昔日是傳教士與文人雅士的避暑勝地，漫步其中不僅能品嚐美食、購買伴手禮，還能感受古典優雅的度假氛圍。"
                         }
                     ],
@@ -524,6 +539,7 @@
     </script>
 </body>
 </html>
+
 
 
 
