--- a/index.html
+++ b/index.html
@@ -226,14 +226,24 @@
                             name: "川越小江戶",
                             // 指向 GitHub images 資料夾
                             image: "./images/川越小江戶.png",
+                        },
+                        {
+                            name: "川越小江戶",
+                            // 指向 GitHub images 資料夾
+                            image: "./images/川越小江戶2.jpg",
                             desc: "距離東京不遠的時光隧道，完整保留江戶風貌。「藏造一番街」矗立著黑色厚重瓦片的傳統倉庫建築。地標「時之鐘」屹立數百年，至今仍敲鐘報時。遊客可穿和服漫步，品嚐地瓜甜點，或造訪冰川神社，深刻體驗日本傳統魅力。"
                         },
                         {
                             name: "台場",
                             // 指向 GitHub images 資料夾
                             image: "./images/台場.png",
-                            desc: "東京灣最受歡迎的娛樂區。最吸睛的是DiverCity前的「獨角獸鋼彈」立像，高19.7公尺，夜晚有精彩燈光變身秀。此外，還能漫步海濱公園，欣賞彩虹大橋、自由女神與東京鐵塔同框的迷人夜景，是感受東京現代魅力的最佳去處。"
                         }
+                        {
+                            name: "台場",
+                            // 指向 GitHub images 資料夾
+                            image: "./images/台場2.jpg",
+                            desc: "東京灣最受歡迎的娛樂區。最吸睛的是DiverCity前的「獨角獸鋼彈」立像，高19.7公尺，夜晚有精彩燈光變身秀。此外，還能漫步海濱公園，欣賞彩虹大橋、自由女神與東京鐵塔同框的迷人夜景，是感受東京現代魅力的最佳去處。"
+                        },
                     ],
                     detailedFeatures: {
                         feature: "川越藏造一番街保留了江戶時代的黑瓦建築。台場則是東京灣的人氣娛樂區，巨大的獨角獸鋼彈是動漫迷聖地。",
@@ -539,6 +549,7 @@
     </script>
 </body>
 </html>
+
 
 
 
