--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                     tagColor: "bg-green-50 text-green-600",
                     attractions: [
                         {
-                            name: "成田機場",
-                            image: "https://images.unsplash.com/photo-1573139897007-a2563d99e373?q=80&w=800&auto=format&fit=crop",
+                            name: "回家",
+                            image: "./images/回家.jpg",
                             desc: "旅程的終點，最後的購物衝刺。"
                         },
                         {
@@ -549,6 +549,7 @@
     </script>
 </body>
 </html>
+
 
 
 
