--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                                                     React.createElement("img", { 
                                                         src: attr.image, 
                                                         alt: attr.name, 
-                                                        className: "w-full h-full object-cover",
+                                                        className: "w-full h-full object-contain",
                                                         onError: (e) => {
                                                             e.target.onerror = null;
                                                             // 當圖片載入失敗時，使用 Unsplash 隨機圖
@@ -483,7 +483,7 @@
                          // Manza Prince
                         React.createElement("div", { className: "bg-white rounded-2xl overflow-hidden shadow-sm border border-slate-100" },
                             React.createElement("div", { className: "h-32 bg-slate-200 relative" },
-                                React.createElement("img", { src: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Manza_Onsen_Tsumagoi_Gunma01bs4272.jpg/800px-Manza_Onsen_Tsumagoi_Gunma01bs4272.jpg", className: "w-full h-full object-cover" }),
+                                React.createElement("img", { src: "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Manza_Onsen_Tsumagoi_Gunma01bs4272.jpg/800px-Manza_Onsen_Tsumagoi_Gunma01bs4272.jpg", className: "w-full h-full object-contain" }),
                                 React.createElement("div", { className: "absolute top-2 right-2 bg-black/50 text-white text-[10px] px-2 py-1 rounded backdrop-blur-sm" }, "Day 2")
                             ),
                             React.createElement("div", { className: "p-4" },
@@ -496,7 +496,7 @@
                         React.createElement("div", { className: "bg-white rounded-2xl overflow-hidden shadow-sm border border-pink-100" },
                             React.createElement("div", { className: "h-32 bg-pink-50 relative" },
                                 // 使用上傳的圖片
-                                React.createElement("img", { src: "./images/輕井澤舊銀座通.png", className: "w-full h-full object-cover", onError: (e) => { e.target.src = "https://source.unsplash.com/800x600/?shopping,mall"; } }),
+                                React.createElement("img", { src: "./images/輕井澤舊銀座通.png", className: "w-full h-full object-contain", onError: (e) => { e.target.src = "https://source.unsplash.com/800x600/?shopping,mall"; } }),
                                 React.createElement("div", { className: "absolute top-2 right-2 bg-black/50 text-white text-[10px] px-2 py-1 rounded backdrop-blur-sm" }, "Day 3")
                             ),
                             React.createElement("div", { className: "p-4" },
@@ -510,7 +510,7 @@
                         // Ski
                         React.createElement("div", { className: "bg-white rounded-2xl overflow-hidden shadow-sm border border-blue-100" },
                             React.createElement("div", { className: "h-32 bg-blue-50 relative" },
-                                React.createElement("img", { src: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Manza-manzayama.jpg/800px-Manza-manzayama.jpg", className: "w-full h-full object-cover" }),
+                                React.createElement("img", { src: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Manza-manzayama.jpg/800px-Manza-manzayama.jpg", className: "w-full h-full object-contain" }),
                                 React.createElement("div", { className: "absolute top-2 right-2 bg-black/50 text-white text-[10px] px-2 py-1 rounded backdrop-blur-sm" }, "Day 2")
                             ),
                             React.createElement("div", { className: "p-4" },
@@ -531,3 +531,4 @@
     </script>
 </body>
 </html>
+
